@@ -186,7 +186,7 @@ public class DomainResource extends AbstractDomainResource {
                 .andThen(domainService.findById(domainId)
                         .switchIfEmpty(Maybe.error(new DomainNotFoundException(domainId)))
                         .flatMapSingle(domain -> entrypointService.findAll(organizationId)
-                                .toList()
+                                .collect(Collectors.toList())
                                 .map(entrypoints -> filterEntrypoints(entrypoints, domain))))
                 .subscribe(response::resume, response::resume);
     }
@@ -321,7 +321,7 @@ public class DomainResource extends AbstractDomainResource {
             response.resume(new BadRequestException("You need to specify at least one value to update."));
         } else {
             Completable.merge(requiredPermissions.stream()
-                    .map(permission -> checkAnyPermission(organizationId, environmentId, domainId, permission, Acl.UPDATE)).toList())
+                    .map(permission -> checkAnyPermission(organizationId, environmentId, domainId, permission, Acl.UPDATE)).collect(Collectors.toList()))
                     .andThen(domainService.patch(domainId, patchDomain, authenticatedUser)
                             .flatMap(domain -> findAllPermissions(authenticatedUser, organizationId, environmentId, domainId)
                                     .map(userPermissions -> filterDomainInfos(domain, userPermissions))))
