@@ -17,18 +17,17 @@ package io.gravitee.am.management.service.impl.plugins;
 
 import io.gravitee.am.management.service.FactorPluginService;
 import io.gravitee.am.plugins.factor.core.FactorPluginManager;
-import io.gravitee.am.plugins.handlers.api.core.AmPluginManager;
-import io.gravitee.am.service.exception.PluginNotDeployedException;
 import io.gravitee.am.service.exception.TechnicalManagementException;
 import io.gravitee.am.service.model.plugin.FactorPlugin;
 import io.gravitee.plugin.core.api.Plugin;
-import io.reactivex.rxjava3.core.Completable;
 import io.reactivex.rxjava3.core.Maybe;
 import io.reactivex.rxjava3.core.Observable;
 import io.reactivex.rxjava3.core.Single;
+
+import java.util.stream.Collectors;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -54,7 +53,7 @@ public class FactorPluginServiceImpl extends AbstractPluginService implements Fa
         LOGGER.debug("List all factor plugins");
         return Observable.fromIterable(factorPluginManager.findAll(true))
                 .map(this::convert)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
