@@ -23,11 +23,15 @@ import io.gravitee.plugin.core.api.Plugin;
 import io.reactivex.rxjava3.core.Maybe;
 import io.reactivex.rxjava3.core.Observable;
 import io.reactivex.rxjava3.core.Single;
-import java.util.List;
+
+import java.util.stream.Collectors;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
 
 /**
  * @author David BRASSELY (david.brassely at graviteesource.com)
@@ -66,7 +70,7 @@ public class IdentityProviderPluginServiceImpl extends AbstractPluginService imp
         return Observable.fromIterable(identityProviderPluginManager.findAll(true))
             .filter(idp -> (external != null && external) == idp.external())
             .map(idp -> convert(idp, expand))
-            .toList()
+            .collect(Collectors.toList())
             .onErrorResumeNext(ex -> {
                 LOGGER.error("An error occurs while trying to list all identity provider plugins", ex);
                 return Single.error(new TechnicalManagementException("An error occurs while trying to list all identity provider plugins", ex));
