@@ -19,6 +19,9 @@ import io.gravitee.am.model.Domain;
 import io.gravitee.am.service.DomainService;
 import io.gravitee.am.service.ReporterService;
 import io.reactivex.rxjava3.core.Completable;
+
+import java.util.stream.Collectors;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -53,7 +56,7 @@ public class DomainReporterUpgrader implements Upgrader, Ordered {
 
     private Completable updateDefaultReporter(Domain domain) {
         return reporterService.findByDomain(domain.getId())
-                .toList()
+                .collect(Collectors.toList())
                 .flatMapCompletable(reporters -> {
                     if (reporters == null || reporters.isEmpty()) {
                         logger.info("No default reporter found for domain {}, update domain", domain.getName());
