@@ -21,8 +21,6 @@ import io.gravitee.am.model.application.ApplicationSecretSettings;
 import io.gravitee.am.repository.jdbc.common.JSONMapper;
 
 import java.util.List;
-import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 /**
  * @author Eric LELEU (eric.leleu at graviteesource.com)
@@ -36,12 +34,12 @@ public class AppSecretSettingsConverter extends DozerConverter<List, String> {
 
     @Override
     public String convertTo(List bean, String s) {
-        return JSONMapper.toJson(bean.stream().map(secretSettings -> new JSONMapper.JdbcApplicationSecretSettings((ApplicationSecretSettings) secretSettings)).collect(Collectors.toList()));
+        return JSONMapper.toJson(bean.stream().map(secretSettings -> new JSONMapper.JdbcApplicationSecretSettings((ApplicationSecretSettings) secretSettings)).toList());
     }
 
     @Override
     public List convertFrom(String s, List bean) {
         final List<JSONMapper.JdbcApplicationSecretSettings> settings = JSONMapper.toCollectionOfBean(s, new TypeReference<List<JSONMapper.JdbcApplicationSecretSettings>>(){});
-        return settings != null ? settings.stream().map(jdbcSettings -> new ApplicationSecretSettings(jdbcSettings.getId(), jdbcSettings.getAlgorithm(), jdbcSettings.getProperties())).collect(Collectors.toList()) : null;
+        return settings != null ? settings.stream().map(jdbcSettings -> new ApplicationSecretSettings(jdbcSettings.getId(), jdbcSettings.getAlgorithm(), jdbcSettings.getProperties())).toList() : null;
     }
 }
