@@ -293,13 +293,10 @@ public abstract class AbstractUserService<T extends CommonUserRepository> implem
 
         return getUserRepository().findById(userId)
                 .switchIfEmpty(Single.error(new UserNotFoundException(userId)))
-                .flatMap(user -> {
-                    /// delete WebAuthn credentials
-                    return credentialService.findByUserId(user.getReferenceType(), user.getReferenceId(), user.getId())
+                .flatMap(user -> credentialService.findByUserId(user.getReferenceType(), user.getReferenceId(), user.getId())
                             .flatMapCompletable(credential -> credentialService.delete(credential.getId(), false))
                             .andThen(getUserRepository().delete(userId))
-                            .toSingleDefault(user);
-                })
+                            .toSingleDefault(user))
                 .onErrorResumeNext(ex -> {
                     if (ex instanceof AbstractManagementException) {
                         return Single.error(ex);
@@ -322,7 +319,7 @@ public abstract class AbstractUserService<T extends CommonUserRepository> implem
                     Set<String> roles = new HashSet<>();
                     if (groups != null && !groups.isEmpty()) {
                         // set groups
-                        user.setGroups(groups.stream().map(Group::getName).collect(Collectors.toList()));
+                        user.setGroups(groups.stream().map(Group::getName).toList());
                         // set groups roles
                         roles.addAll(groups
                                 .stream()
