@@ -16,13 +16,14 @@
 package io.gravitee.am.service.utils;
 
 import io.gravitee.am.model.oidc.Client;
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static io.gravitee.am.common.oauth2.GrantType.AUTHORIZATION_CODE;
 import static io.gravitee.am.common.oauth2.GrantType.IMPLICIT;
@@ -38,6 +39,7 @@ import static io.gravitee.am.common.oidc.ResponseType.ID_TOKEN_TOKEN;
  * @author Alexandre FARIA (contact at alexandrefaria.net)
  * @author GraviteeSource Team
  */
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ResponseTypeUtils {
 
     private static final Set<String> SUPPORTED_RESPONSE_TYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
@@ -45,7 +47,7 @@ public class ResponseTypeUtils {
     )));
 
     public static List<String> getSupportedResponseTypes() {
-        return Collections.unmodifiableList(SUPPORTED_RESPONSE_TYPES.stream().sorted().collect(Collectors.toList()));
+        return Collections.unmodifiableList(SUPPORTED_RESPONSE_TYPES.stream().sorted().toList());
     }
 
     /**
@@ -86,7 +88,7 @@ public class ResponseTypeUtils {
      */
     public static Client applyDefaultResponseType(Client client) {
         Set responseType = applyDefaultResponseType(client.getAuthorizedGrantTypes());
-        client.setResponseTypes((List<String>)responseType.stream().collect(Collectors.toList()));
+        client.setResponseTypes((List<String>)responseType.stream().toList());
         return client;
     }
 
